<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:accessibilityPaneTitle="">

    <EditText
        android:id="@+id/send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/send_text"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:id="@+id/button_call" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_map"
        android:id="@+id/button_map" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_web_pages"
        android:id="@+id/button_web" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:id="@+id/button_mail" />

    <Button
        android:id="@+id/button_go_to_png"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="GO TO PNG" />

</LinearLayout>